--- a/index.html
+++ b/index.html
@@ -3,7 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Calculator</title>
   </head>
-  <body></body>
+  <body>
+    <div class="calc">
+      <div class="input-field"></div>
+      <div class="btn-container">
+        <div class="btn-row"><button>C</button><button>÷</button></div>
+        <div class="btn-row">
+          <button>7</button><button>8</button><button>9</button
+          ><button class="work-btn">×</button>
+        </div>
+        <div class="btn-row">
+          <button>4</button><button>5</button><button>6</button
+          ><button class="work-btn">−</button>
+        </div>
+        <div class="btn-row">
+          <button>1</button><button>2</button><button>3</button
+          ><button class="work-btn">+</button>
+        </div>
+        <div class="btn-row">
+          <button>0</button><button>⋅</button
+          ><button class="work-btn">=</button>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
