add buttons and basic style

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   </head>
   <body>
     <div class="calc">
-      <div class="input-field"></div>
+      <div class="input-field">sample text</div>
       <div class="btn-container">
-        <div class="btn-row"><button>C</button><button>÷</button></div>
+        <div class="btn-row">
+          <button>C</button><button class="work-btn">÷</button>
+        </div>
         <div class="btn-row">
           <button>7</button><button>8</button><button>9</button
           ><button class="work-btn">×</button>
