--- a/index.html
+++ b/index.html
@@ -11,22 +11,30 @@
       <div class="input-field">sample text</div>
       <div class="btn-container">
         <div class="btn-row">
-          <button>C</button><button class="work-btn">÷</button>
+          <button class="clear-btn">C</button
+          ><button class="work-btn">÷</button>
         </div>
         <div class="btn-row">
-          <button>7</button><button>8</button><button>9</button
+          <button class="input-btn">7</button
+          ><button class="input-btn">8</button
+          ><button class="input-btn">9</button
           ><button class="work-btn">×</button>
         </div>
         <div class="btn-row">
-          <button>4</button><button>5</button><button>6</button
+          <button class="input-btn">4</button
+          ><button class="input-btn">5</button
+          ><button class="input-btn">6</button
           ><button class="work-btn">−</button>
         </div>
         <div class="btn-row">
-          <button>1</button><button>2</button><button>3</button
+          <button class="input-btn">1</button
+          ><button class="input-btn">2</button
+          ><button class="input-btn">3</button
           ><button class="work-btn">+</button>
         </div>
         <div class="btn-row">
-          <button>0</button><button>⋅</button
+          <button class="input-btn">0</button
+          ><button class="input-btn">.</button
           ><button class="work-btn">=</button>
         </div>
       </div>
