add base functionality

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="calc">
-      <div class="input-field">sample text</div>
+      <div class="input-field">0</div>
       <div class="btn-container">
         <div class="btn-row">
           <button class="clear-btn">C</button
@@ -35,7 +35,7 @@
         <div class="btn-row">
           <button class="input-btn">0</button
           ><button class="input-btn">.</button
-          ><button class="work-btn">=</button>
+          ><button class="operate-btn">=</button>
         </div>
       </div>
     </div>
