add backspace button

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
       <div class="input-field">0</div>
       <div class="btn-container">
         <div class="btn-row">
-          <button class="clear-btn">C</button
-          ><button class="work-btn">÷</button>
+          <button class="clear-btn">C</button>
+          <button class="backspace-btn">CE</button>
+          <button class="work-btn">÷</button>
         </div>
         <div class="btn-row">
           <button class="input-btn">7</button
