add calc window above result

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <div class="calc">
-      <div class="input-field">0</div>
+      <div>
+        <div class="result-field"></div>
+        <div class="input-field">0</div>
+      </div>
       <div class="btn-container">
         <div class="btn-row">
           <button class="clear-btn">C</button>
