--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Calculator</title>
   </head>
   <body>
+    <h2>Simple Calculator</h2>
     <div class="calc-container">
       <div class="calc">
         <div>
